updated default image for zomato restaurants

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <div class="humour box-shadow">
                     <h3>Humour Corner</h3>
                     <div><p>What did the lettuce say to the celery?</p>
-                        <p>Are you stalking me?</p>
+                        <p>-Are you stalking me?</p>
                     </div>
                     <div>
                         <p>What did one vegetarian spy say to the other vegetarian spy?</p>
-                        <p>We have to stop meating like this.</p>
+                        <p>-We have to stop meating like this.</p>
                     </div>
                     <h4>For more veggie jokes go <a href="https://www.happycow.net/vegtopics/humor">here.</a></h4>
                 </div>
