--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <label for="eat-out">EAT-OUT</label>
             </section>
             <form action="#" id="form_search" class="searchBox">
-                    <input type="textarea" placeholder="ingredients, recipe name or cuisine" class="search_query" required/>
+                    <input type="textarea" placeholder="ingredients, recipe name or cuisine" 
+                    class="search_query" required/>
                     <button type="submit"> Search </button>
             </form>
     </header>
@@ -143,6 +144,8 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJdWQmj96Rdl3SfR85u8XNw94e2_s-Ezk&libraries=places&callback=initAutocomplete"
+    async defer></script>
   <script src="js/index.js"></script>
 </body>
 </html>
