--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <label for="eat-out">EAT-OUT</label>
             </section>
             <form action="#" id="form_search" class="searchBox">
-                    <input type="textarea" placeholder="ingredients, recipe name or cuisine" 
-                    class="search_query" required/>
+                    <input type="text" placeholder="ingredients, recipe name or cuisine" 
+                    class="search_query" onFocus="geolocate()" id="autocomplete" required/>
                     <button type="submit"> Search </button>
             </form>
     </header>
