added https tag

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </section>
                     <form action="#" id="form_search" class="searchBox">
                             <input type="text" placeholder="ingredients, recipe name or cuisine" 
-                            class="search_query" required/>
+                            class="search_query" required id="autocomplete"/>
                             <button type="submit"> Search </button>
                     </form>
                 </header>
@@ -177,7 +177,7 @@
               </main> <!--end main section -->
         </div>
 <script
-src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
 <script src="js/index.js"></script>
