updated colors, added image and get directions link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div id="slider" class="carousel slide row" data-ride="carousel" data-interval="10000">
             <div class="col-sm-12">
-                <h2>Why Go Veggie?</h2>
+                <h2><span class="why">Why</span> Go Veggie?</h2>
                 <ol class="carousel-indicators">
                     <li data-target="#slider" data-slide-to="0" class="active"></li>
                     <li data-target="#slider" data-slide-to="1"></li>
@@ -88,9 +88,9 @@
         </div> <!-- end of header section -->
         <main role="main">
                 <!-- Placeholder for search results from API -->
-                <ul class="results"></ul>
+                <ul class="js-results"></ul>
                <div class="infoPage row">
-                  <article class="faq content box-shadow col-sm-12 col-md-6">
+                  <article class="faq content box-shadow col-sm-12 col-md-6 shadow">
                             <h3>Common Questions About Vegetarian Diets</h3>
                             <ul>
                                 <li>
@@ -128,30 +128,33 @@
                                 </li>
                             </ul>
                         </article>
-                  <article class="content col-sm-12 col-md-6">
+                  <article class="content col-sm-12 col-md-6 shadow">
                             <div class="facts box-shadow">
                                 <h3>Did you Know?</h3>
                                 <ul>
-                                    <li><p>The first Vegetarian Society was formed in England in 1847. 
+                                    <li>The first Vegetarian Society was formed in England in 1847. 
                                     The society’s goal was to teach people that it is possible to be healthy without 
-                                    eating meat.</p></li>
-                                    <li><p>Vegetarianism has roots in ancient India. In fact, currently 70% of the world’s 
+                                    eating meat.</li>
+                                    <li>Vegetarianism has roots in ancient India. In fact, currently 70% of the world’s 
                                         vegetarians are Indians and there are more vegetarians in India than in any 
-                                        other country in the world.</p></li>
-                                    <li><p> Only around 20% of the corn grown in the United States is eaten by people, 
-                                        with about 80% of the corn eaten by livestock.</p></li>
-                                    <li><p>Opting for vegetarian food does not mean no more meat.
-                                        Creating a good plant-based diet a few times a week would be a healthy start.</p>
+                                        other country in the world.</li>
+                                    <li> Only around 20% of the corn grown in the United States is eaten by people, 
+                                        with about 80% of the corn eaten by livestock.</li>
+                                    <li>Opting for vegetarian food does not mean no more meat.
+                                        Creating a good plant-based diet a few times a week would be a healthy start.
                                     </li>
                                     <li>
-                                        <p>One of the first famous vegetarians was the Greek philosopher Pythagoras 
+                                        One of the first famous vegetarians was the Greek philosopher Pythagoras 
                                             who lived at the end of the 6th century B.C. In fact, the term “Pythagorean diet” 
-                                            was commonly used for a plant-based diet until the term “vegetarian” was coined in the 19th century.</p>
+                                            was commonly used for a plant-based diet until the term “vegetarian” was coined in the 19th century.
                                     </li>
                                 </ul>
                             </div>
                             <div class="humour box-shadow">
-                                <h3>Humour Corner</h3>
+                                
+                                <h3> <img class="carrots" src="images/carrots_vector.png" alt=" bunch of carrots laughing">
+                                    Humour Corner</h3>
+                                
                                 <ul>
                                     <li>
                                         <p>What did the lettuce say to the celery?</p>
