added smooth scroll, parallax picture for search

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </div>
         </div> <!---end of slider section -->
         <div class="row">
-            <header role="banner" class="col-sm-12">
+            <header role="banner" class="col-sm-12" >
                 <h1>Welcome to Green Eats</h1>
                 <p>Here you can find inspirations for cooking vegetarian recipes or
                     find veg-friendly restaurants in your city.
@@ -84,11 +84,11 @@
                             class="search_query" required id="autocomplete"/>
                             <button type="submit"> Search </button>
                     </form>
-                </header>
+            </header>        
         </div> <!-- end of header section -->
         <main role="main">
                 <!-- Placeholder for search results from API -->
-                <ul class="js-results"></ul>
+                <ul class="js-results" id="results"></ul>
                <div class="infoPage row">
                   <article class="faq content box-shadow col-sm-12 col-md-6 shadow">
                             <h3>Common Questions About Vegetarian Diets</h3>
@@ -176,7 +176,7 @@
                             </div>
                         </article>
                 </div>
-                <p id="back"><a href="#slider" >Back to Search</a></p>
+                <p><a href="#" id="back" >Back to Search</a></p>
               </main> <!--end main section -->
         </div>
 <script
